# hydra-bot-backend

./: .env  Cargo.toml  README.md  build.sh
src/: main.rs
src/common/: config.rs
