[package]
name = "hydra-master"
version = "0.1.0"
edition = "2021"
default-run = "hydra-master"

[dependencies]
# Web Server
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Networking (The Fix for connection)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2.5"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
anyhow = "1"
dotenv = "0.15"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "hydra-master"
path = "src/main.rs"